[package]
name = "unrpa-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
indexmap = { version = "2.11.3", features = ["serde"] }
log = "0.4.28"
serde = { version = "1.0.225", features = ["derive"] }
serde-pickle = "1.2.0"
serde_bytes = "0.11.19"
serde_tuple = "1.1.2"
thiserror = "2.0.16"
zune-inflate = { version = "0.2.54", default-features = false, features = ["zlib"] }
