[package]
name = "unrpa-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
indexmap = { version = "2.14.0", features = ["serde"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde-pickle = "1.2.0"
serde_bytes = "0.11.19"
serde_tuple = "1.1.3"
thiserror = "2.0.18"
tracing-subscriber = "0.3.23"
zune-inflate = { version = "0.2.54", default-features = false, features = ["zlib"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

